fix: correct nav wrapping behavior on dsd mobile

--- a/src/styles/components-ec-style/_dataset_details.scss
+++ b/src/styles/components-ec-style/_dataset_details.scss
@@ -293,3 +293,8 @@
     }
   }
 }
+@media screen and (max-width: 480px) { // less than sm
+  .dsd-nav {
+    flex-wrap: wrap !important;
+  }
+}
